<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_to_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_to_progress_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progressdialog"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_to_popup_window"
        android:text="@string/popup_window"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>


</LinearLayout>